syntax = "proto3";

package inx;
option go_package = "github.com/gohornet/pkg/inx";

service INX {

  rpc ReadNodeStatus(NoParams) returns (NodeStatus);

  // Messages
  rpc ListenToMessages(MessageFilter) returns (stream Message);
  rpc ListenToReferencedMessages(MessageFilter) returns (stream MessageMetadata);
  rpc SubmitMessage(SubmitMessageRequest) returns (SubmitMessageResponse);

  // UTXO
  rpc ReadUnspentOutputs(NoParams) returns (stream LedgerOutput);
  rpc ListenToLedgerUpdates(LedgerUpdateRequest) returns (stream LedgerUpdate);

  // REST API
  rpc RegisterAPIRoute(APIRouteRequest) returns (NoParams);
  rpc UnregisterAPIRoute(APIRouteRequest) returns (NoParams);

}

message NoParams {}

message MessageFilter {
  //TODO
}

message SubmitMessageRequest {
  Raw message = 1;
}

message SubmitMessageResponse {
  bytes messageId = 1;
}

message Raw {
  bytes data = 1;
}

message Message {
  bytes messageId = 1;
  Raw message = 2;
}

message MessageMetadata {
  bytes messageId = 1;
  repeated bytes parents = 2;
  uint32 referencedByMilestoneIndex = 3;
  uint32 milestoneIndex = 4;
  enum LedgerInclusionState {
    NO_TRANSACTION = 0;
    INCLUDED = 1;
    CONFLICTING = 2;
  }
  LedgerInclusionState ledgerInclusionState = 5;
  enum ConflictReason {
    NONE = 0;
    INPUT_ALREADY_SPENT = 1;
    INPUT_ALREADY_SPENT_IN_THIS_MILESTONE = 2;
    INPUT_NOT_FOUND = 3;
    INPUT_OUTPUT_SUM_MISMATCH = 4;
    INVALID_SIGNATURE = 5;
    INVALID_NETWORK_ID = 6;
    SEMANTIC_VALIDATION_FAILED = 255;
  }
  ConflictReason conflictReason = 6;
}

message LedgerOutput {
  bytes outputId = 1;
  bytes messageId = 2;
  uint32 milestoneIndex = 3;
  uint32 milestoneTimestamp = 4;
  Raw output = 5;
}

message LedgerSpent {
  LedgerOutput output = 1;
  bytes targetTransactionId = 2;
  uint32 spentMilestoneIndex = 3;
  uint32 spentMilestoneTimestamp = 4;
}

message NodeStatus {
  uint32 latestMilestoneIndex = 1;
  uint32 confirmedMilestoneIndex = 2;
  uint32 pruningIndex = 3;
  uint32 ledgerIndex = 4;
}

message LedgerUpdateRequest {
  uint32 startMilestoneIndex = 1;
}

message LedgerUpdate {
  uint32 milestoneIndex = 1;
  repeated LedgerOutput created = 2;
  repeated LedgerSpent consumed = 3;
}

message APIRouteRequest {
  string route = 1;
  string host = 2;
  uint32 port = 3;
}
